<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cosmo.arquitecturamvpbase.views.activities.LoginActivity">

    <TextView
        android:id="@+id/textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginName" />
    <TextView
        android:id="@+id/textview_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginUserName"
        android:layout_below="@+id/textview_name"/>

    <TextView
        android:id="@+id/textview_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginEmail"
        android:layout_below="@+id/textview_username"/>

    <TextView
        android:id="@+id/textview_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginPassword"
        android:layout_below="@+id/textview_email"/>


    <TextView
        android:id="@+id/textview_followings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginFollowings"
        android:layout_below="@+id/textview_password"/>

    <TextView
        android:id="@+id/textview_follogers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginFollowers"
        android:layout_below="@+id/textview_followings"/>

    <TextView
        android:id="@+id/textview_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginLikes"
        android:layout_below="@+id/textview_follogers"/>

    <ImageView
        android:id="@+id/imageview_Photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_likes"/>

    <TextView
        android:id="@+id/textview_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginToken"
        android:layout_below="@+id/imageview_Photo"/>

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"/>


    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edittext_name"/>

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edittext_username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edittext_email"/>

    <EditText
        android:id="@+id/edittext_followings"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edittext_password"/>

    <EditText
        android:id="@+id/edittext_followers"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edittext_followings"/>

    <EditText
        android:id="@+id/edittext_likes"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edittext_followers"/>
    <EditText
        android:id="@+id/edittext_token"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edittext_likes"/>

</RelativeLayout>
